--- a/index.html
+++ b/index.html
@@ -16,16 +16,18 @@
 	<link href="css/styles.css" rel="stylesheet">
 </head>
 <body>
-	<header>
-		<h1>Welcome to MMP 210</h1>
-	</header>
+
+
 	<div class="animsition">
 		<div class="container">
+
 			<nav class="navbar navbar-default">
 				<div class="container-fluid">
 					<div class="navbar-header">
 
 						<button aria-expanded="false" class="navbar-toggle collapsed" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" type="button"><span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span></button>
+
+                        <a id="nav-name" class="navbar-brand animated-links" href="index.html">MMP 210</a>
 
 					</div><!-- Navbar Header-->
 					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -48,151 +50,27 @@
 				</div><!-- /.container-fluid -->
 			</nav>
 
-			<h2>Welcome to My Class Website</h2>
 
-			<div class="carousel slide" data-ride="carousel" id="featured-work">
-				
-				<ol class="carousel-indicators">
+          <!-- Header -->
+          <div id="header" class="header">
+            <div class="container">
+              <div class="col-lg-12">
 
-					<li class="active" data-slide-to="0" data-target="#featured-work"></li>
+                <h1>Welcome to MMP 210</h1>
 
-
-					<li data-slide-to="1" data-target="#featured-work"></li>
-
-
-					<li data-slide-to="2" data-target="#featured-work"></li>
-
-
-					<li data-slide-to="3" data-target="#featured-work"></li>
-
-					<li data-slide-to="4" data-target="#featured-work"></li>
-
-					<li data-slide-to="5" data-target="#featured-work"></li>
-
-					<li data-slide-to="6" data-target="#featured-work"></li>
-
-					<li data-slide-to="7" data-target="#featured-work"></li>
-
-				</ol>
-
-				<div class="carousel-inner" role="listbox">
-					<div class="item active"><!-- Slide 1 -->
-						<img alt="..." src="img/assignment1.png">
-
-						<div class="carousel-caption">
-							<h3 class="carousel-header">Assignment #1</h3>
-
-							<p class="carousel-text">Self Portrait</p>
-						</div>
-					</div>
-
-
-					<div class="item"><!-- Slide 2 -->
-						<img alt="..." src="img/assignment2.png">
-
-						<div class="carousel-caption">
-							<h3 class="carousel-header">Assignment #2</h3>
-
-							<p class="carousel-text">Variables</p>
-						</div>
-					</div>
-
-
-					<div class="item"><!-- Slide 3 -->
-						<img alt="..." src="img/assignment3.png">
-
-						<div class="carousel-caption">
-							<h3 class="carousel-header">Assignment #3</h3>
-
-							<p class="carousel-text">Logo</p>
-						</div>
-					</div>
-
-
-					<div class="item"><!-- Slide 4 -->
-						<img alt="..." src="img/assignment4.png">
-
-						<div class="carousel-caption">
-							<h3 class="carousel-header">Assignment #4</h3>
-
-							<p class="carousel-text">Interactive Design</p>
-						</div>
-					</div>
-
-					<div class="item"><!-- Slide 5 -->
-						<img alt="..." src="img/assignment5.png">
-
-						<div class="carousel-caption">
-							<h3 class="carousel-header">Assignment #5</h3>
-
-							<p class="carousel-text">Drawing With Logic</p>
-						</div>
-					</div>
+              </div>
+            </div>
+          </div>
 
 
 
-					<div class="item"><!-- Slide 6 -->
-						<img alt="..." src="img/assignment6.gif">
-
-						<div class="carousel-caption">
-							<h3 class="carousel-header">Assignment #6</h3>
-
-							<p class="carousel-text">Animation</p>
-						</div>
-					</div>
-
-					<div class="item"><!-- Slide 7 -->
-						<img alt="..." src="img/assignment7.png">
-
-						<div class="carousel-caption">
-							<h3 class="carousel-header">Assignment #7</h3>
-
-							<p class="carousel-text">Loops</p>
-						</div>
-					</div>
-
-					<div class="item"><!-- Slide 8 -->
-						<img alt="..." src="img/midterm.gif">
-
-						<div class="carousel-caption">
-							<h3 class="carousel-header">Midterm</h3>
-
-							<p class="carousel-text">Generative Design</p>
-						</div>
-					</div>
-
-
-
-
-				</div>
-				<!-- Controls -->
-				 <a class="left carousel-control" data-slide="prev" href="#featured-work" role="button"><span aria-hidden="true" class="glyphicon glyphicon-chevron-left"></span> <span class="sr-only">Previous</span></a> <a class="right carousel-control" data-slide="next" href="#featured-work" role="button"><span aria-hidden="true" class="glyphicon glyphicon-chevron-right"></span> <span class="sr-only">Next</span></a>
-			</div>
 
 			<div class="text">
 
 
-				<p>This website will be used to post my class assignments for my MMP 210 class</p>
+                <p>Here you will find my Assignments, Midterm and Final that I have done for my MMP 210 Class back in my Fall 2017 Semester in Borough of Manhattan Community College.</p>
 
-                <p>Also, all of my p5 Sketches are now responsive!!</p>
-
-                <h2>List of Assignments</h2>
-
-                <p><a class="animsition-link, link" href="Assignments/Assignment1/self_portrait.html">Assignment 1</a> : Self Portrait</p>
-
-                <p><a class="animsition-link, link" href="Assignments/Assignment2/Assignment_2.html">Assignment 2</a> : Variables</p>
-
-                <p><a class="animsition-link, link" href="Assignments/Assignment3/Assignment_3.html">Assignment 3</a> : Logo</p>
-
-                <p><a class="animsition-link, link" href="Assignments/Assignment4/Assignment_4.html">Assignment 4</a> : Interactive Design</p>
-
-                <p><a class="animsition-link, link" href="Assignments/Assignment5/Assignment_5.html">Assignment 5</a> : Drawing with Logic</p>
-
-                <p><a class="animsition-link, link" href="Assignments/Assignment6/Assignment_6.html">Assignment 6</a> : Animation</p>
-
-                <p><a class="animsition-link, link" href="Assignments/Assignment7/Assignment_7.html">Assignment 7</a> : Loops & Functions</p>
-
-                <p><a class="animsition-link, link" href="Assignments/Midterm/Midterm.html">Midterm</a> : Generative Design</p>
+                <a class = "link animsition-link"   href="Assignments/assignments.html">Go To Assignments</a>
 
 
                 
