--- a/About/about.html
+++ b/About/about.html
@@ -18,17 +18,22 @@
 </head>
 
 <body>
-	<header>
-		<h1>Welcome to MMP 210</h1>
-	</header>
+
 
 	<div class="animsition">
 		<div class="container">
+
 			<nav class="navbar navbar-default">
 				<div class="container-fluid">
 					<div class="navbar-header">
 
-						<button aria-expanded="false" class="navbar-toggle collapsed" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" type="button"><span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span></button>
+						<button aria-expanded="false" class="navbar-toggle collapsed" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" type="button">
+                            <span class="sr-only">Toggle navigation</span> 
+                            <span class="icon-bar"></span> 
+                            <span class="icon-bar"></span> 
+                            <span class="icon-bar"></span></button>
+
+                        <a id="nav-name" class="navbar-brand animated-links" href="index.html">MMP 210</a>
 
 					</div><!-- Navbar Header-->
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -51,18 +56,26 @@
 				</div><!-- /.container-fluid -->
 			</nav>
 
-			<h2>Get to Know Me!</h2>
 
+          <!-- Header -->
+          <div id="header" class="header">
+            <div class="container">
+              <div class="col-lg-12">
+                <h1>Get To Know Me</h1>
+              </div>
+            </div>
+          </div>
 
-				<img src="img/temp.jpg">
+            <div class="text">
+                <img src="img/temp2.jpg">
+            </div>
 
 			<div class="text">
 
-                <p>The name's Jose, a Graphic Designer from New York City. I'm currently attending Borough of Manhattan Community College making my way towards a degree in Multimedia Arts. I am passionate about the work I do since I always put a lot of time and effort into it! I also do web designing which I enjoy learning. I usually spend my free time walking my dog and playing on my PS4. I'm currently playing South Park: The Fractured But Whole. Couple hours in and I am loving everything about it already, it's just like the show and always laughing at the dumbest things.</p>
+                <p>The name's Jose, a Graphic Designer from New York City. I'm currently attending Borough of Manhattan Community College making my way towards a degree in Multimedia Arts. I am passionate about the work I do, I always put a lot of time and effort into the things I do. I also do web designing which I enjoy learning and doing. I usually spend my free time walking my dog and playing on my PS4.</p>
 
-                <p>Feel free to contact me anytime on the class Slack channel throughout this semester if you need help with the class homework or any opinions of your work.</p>
 
-                <p>Also, I know there are some typos here and there. I'm usually up until 4am messing around with the design of the page. Please don't roast me.</p>
+                <p>I know there are some typos here and there. I'm usually up until 4am messing with the page Please don't roast me.</p>
 
 			</div><!-- /.text -->
 		</div><!-- /.container -->
