--- a/Assignments/assignments.html
+++ b/Assignments/assignments.html
@@ -14,15 +14,22 @@
 	<link href="css/styles.css" rel="stylesheet"><!-- My CSS -->
 </head>
 <body>
-	<header>
-		<h1>Welcome to MMP 210</h1>
-	</header>
+
 	<div class="animsition">
 		<div class="container">
+
 			<nav class="navbar navbar-default">
 				<div class="container-fluid">
 					<div class="navbar-header">
-						<button aria-expanded="false" class="navbar-toggle collapsed" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" type="button"><span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span></button>
+
+						<button aria-expanded="false" class="navbar-toggle collapsed" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" type="button">
+                            <span class="sr-only">Toggle navigation</span> 
+                            <span class="icon-bar"></span> 
+                            <span class="icon-bar"></span> 
+                            <span class="icon-bar"></span></button>
+
+                        <a id="nav-name" class="navbar-brand animated-links" href="index.html">MMP 210</a>
+
 					</div><!-- Navbar Header-->
 
 					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -45,7 +52,18 @@
 				</div><!-- /.container-fluid -->
 			</nav>
 
-			<h2>Assignments</h2>
+
+          <!-- Header -->
+
+          <div id="header" class="header">
+            <div class="container">
+              <div class="col-lg-12">
+                <h1>Assignments</h1>
+              </div>
+            </div>
+          </div>
+
+
             
 			<div class="container-fluid assignment-container" id="assignments">
 				<div class="col-sm-6 assignment-hover">
