--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
 </head>
 <body>
 
-
 	<div class="animsition">
 		<div class="container">
 
@@ -25,7 +24,11 @@
 				<div class="container-fluid">
 					<div class="navbar-header">
 
-						<button aria-expanded="false" class="navbar-toggle collapsed" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" type="button"><span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span></button>
+						<button aria-expanded="false" class="navbar-toggle collapsed" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" type="button">
+                            <span class="sr-only">Toggle navigation</span> 
+                            <span class="icon-bar"></span> 
+                            <span class="icon-bar"></span> 
+                            <span class="icon-bar"></span></button>
 
                         <a id="nav-name" class="navbar-brand animated-links" href="index.html">MMP 210</a>
 
@@ -50,31 +53,20 @@
 				</div><!-- /.container-fluid -->
 			</nav>
 
-
           <!-- Header -->
           <div id="header" class="header">
             <div class="container">
               <div class="col-lg-12">
-
                 <h1>Welcome to MMP 210</h1>
-
               </div>
             </div>
           </div>
 
-
-
-
 			<div class="text">
-
 
                 <p>Here you will find my Assignments, Midterm and Final that I have done for my MMP 210 Class back in my Fall 2017 Semester in Borough of Manhattan Community College.</p>
 
                 <a class = "link animsition-link"   href="Assignments/assignments.html">Go To Assignments</a>
-
-
-                
-
 
 			</div><!-- Text Ends Here -->
 		</div><!-- /.container -->
